--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ src-tauri/icons/icon.icns
 src-tauri/icons/32x32.png
 src-tauri/icons/128x128.png
 src-tauri/icons/128x128@2x.png
+
+# Local benchmarking assets
+bench/
